# scout_mini

./: .gitignore  README.md  TASK_LOG.md
docker/: Dockerfile  run.sh  run_container.sh
log/: progress_report_2026-07-08.md
src/scout_gazebo_sim/: CMakeLists.txt  package.xml
src/scout_gazebo_sim/launch/: spawn_scout_mini.launch.py
src/scout_gazebo_sim/worlds/: simple_test_world.world
src/scout_mini_dual_lidar_gazebo/: CMakeLists.txt  package.xml
src/scout_mini_dual_lidar_gazebo/config/: nav2_params.yaml  navigate_w_recovery.xml  scout_mini.rviz  test.yaml
src/scout_mini_dual_lidar_gazebo/launch/: nav2_launch.py  scout_mini_gazebo.launch.py  slam.launch.py
src/scout_mini_dual_lidar_gazebo/maps/: my_map.pgm  my_map.yaml
src/scout_mini_dual_lidar_gazebo/params/: slam_toolbox_params.yaml
src/scout_mini_dual_lidar_gazebo/rviz/: display.rviz
src/scout_mini_dual_lidar_gazebo/src/: auto_path_driver.py  imu_odom_corrector.py  laser_merger.py  odom_to_tf.py  scout_diff_drive.py  scout_diff_drive_controller.py  tf_static_relay.py  tf_to_odom.py
src/scout_mini_dual_lidar_gazebo/urdf/: scout_mini_gazebo.xacro
src/scout_mini_dual_lidar_gazebo/worlds/: simple_test_world.world
